--- a/Tarea 5/Tarea5.Rmd
+++ b/Tarea 5/Tarea5.Rmd
@@ -11,8 +11,8 @@ output:
 <center><strong>CC6104: Statistical Thinking</strong></center>
 #### **Integrantes :** 
 
-- Alumno 1
-- Alumno 2
+- Tomas Alvarado
+- Sebastian Brzovic
 
 #### **Cuerpo Docente:**
 
@@ -79,7 +79,8 @@ A continuación, se presentaran diferentes preguntas que abordan las temáticas 
 
 Señale algunos beneficios (no mas de dos) que nos brinda realizar una regresión lineal bayesiana sobre una regresión ajustada por mínimos cuadrados.
 
-> Respuesta Aquí
+> Regresion Bayesiana es mas flexible que una regresion ajustada por minimos cuadrados debido a que incorpora informacion a priori. hace que los modelos sean mas robusto y menos proclive a que hagan overfitting. 
+Otro beneficio es que permite interpretar la incertidumbre de una manera mas "facil", debido a que tenemos mas elementos, no solo intervalo de confianza sino tambien, tenemos el postirior, posterior etc.
 
 
 #### **Pregunta 2:**
@@ -104,7 +105,11 @@ En base al modelo presentado, responda las siguientes preguntas:
 
 **Respuesta:**
 
-> Respuesta Aquí
+> El primero corresponde a la likelihood en donde cada punto (u= b0 +b1*x1 + ...) sera modelada por la gausiana con media u y desviation o.
+El segundo corresponde al modelo lineal para cada u_i con un parametros b1, b0. 
+La tercera línea corresponde al Prior del parámetro b0,  con media 10 y desviacion 2.
+La cuarta linea corresponde al Prior del parámetro b1,  con media 0 y desviacion 1 
+Y finalmente, sigma es la deviacion estandar de mis normales de cada media es una uniforme entre 0 y 50
 
 #### **Pregunta 3:**
 
@@ -112,40 +117,46 @@ Explique de forma resumida como funciona el algoritmo de Laplace approximation u
 
 **Respuesta:**
 
-> Respuesta Aquí
+> Laplace Aproximation es asumir que mi joint posterior es una gausiana multivariada, donde mu son los valores que maximiza la posterior. 
+Se usa porque para cualquier modelo bastante complejo  una descripción exacta del posterior es computacionalmente intratable. Más allá de una evaluación exhaustiva, la inferencia aproximada permite recuperar descripciones razonables de una superficie posterior o de coste a partir de métodos de aproximación. Por lo que la aproximación de Laplace proporciona el método determinista más simple disponible.
 
 #### **Pregunta 4:**
 Determine si las siguientes afirmaciones son verdaderas o falsas. Justifique las falsas.
 
-- [ ] El algoritmo de metropolis hasting solo funciona si la probabilidad de saltar de B a A es la misma que de A a B.
-- [ ] El algoritmo de Gibbs funciona en cualquier caso.
-- [ ] El algoritmo de metropolis hasting y de Gibbs son el mismo algoritmo, pero este ultimo es una variante del primero.
+- [V] El algoritmo de metropolis hasting solo funciona si la probabilidad de saltar de B a A es la misma que de A a B.
+- [F] El algoritmo de Gibbs funciona en cualquier caso.
+- [V] El algoritmo de metropolis hasting y de Gibbs son el mismo algoritmo, pero este ultimo es una variante del primero.
 
-> Respuesta Aquí
+> Verdadero, el algoritmo converge por la condicion de que  q(o(a)|o(b)) = q(o(a)|o(a))
+Falso, en teoria funcionaria, pero es muy ineficiente con muchisimo datos (ya mas de miles de datos deja de ser eficiente)
+Verdadero
 
 #### **Pregunta 5:**
 
 El algoritmo de Gibbs es mas eficiente que el de metropolis hasting. ¿Como se logra este efecto? ¿Existe alguna limitante de esta estrategia?
 
-> Respuesta Aquí
+> Es mas efectivo porque hace proposiciones adaptativas, es decir la distribucion de los candidatos no es fija, va iterando. Se ajusta inteligentemente el proces de muestreo dependiendo de los parametros que se va actualizando la posterior en cada momento. Ademas que en Metropolisis algorithm muchas proposiciones son rechazadas.
+Sus limitantes son que aveces no queremos usar prior conjugados, ademas se pone muy ineficiente cuando tenemos miles de datos.
 
 
 #### **Pregunta 6:**
 
 De una ventaja y una desventaja del algoritmo HMC.
 
-> Respuesta Aquí
+> HMC es mas eficiente puesto es capaz de describir la posterior con mucho menos datos, por lo que es mejor con demasiados datos
+HMC es bastante complejo y caro
 
 #### **Pregunta 7:**
 
 Nombre y explique dos propiedades que son deseables en una cadena de Markov.
 
-> Respuesta Aquí
+> Estacionaridad: que vaya convergiendo a su distribucion estacionaria, a la posterior. Que se quede ahi. 
+Buena mezcla: Que exista poca autocorrelacion, que no se noten mucho patrones, que cada ejemplo dependa del anterior.
 
 #### **Pregunta 8:**
 Explique cómo cross-validation, criterios de información y regularización ayudan a mitigar o medir los problemas de underfitting y overfitting.
 
-> Respuesta Aquí
+> Cross-validation utiliza trozos de datos (folds) para poder obtener un estimado del out-of-sample deviance. Criterios de información utiliza la siguiente formula AIC=Dtrain+2p. Regularization utiliza el parametro delta para corregir el overfitting y restringe el parametro beta, realiza una restriccion al parametro β para el underfitting
 
 #### **Pregunta 9:**
 
@@ -207,14 +218,193 @@ En conocimiento los datos recopilados por los expertos, le solicitan realizar la
 - [ ] Ajuste el modelo lineal utilizando el método de Laplace approximation. Estudie a través del comando `precis` los resultados obtenidos y coméntelos.
 - [ ] Gráfique el MAP de regresión lineal obtenida, añadiendo al gráfico el intervalo del $95\%$ que se tiene sobre la media y los valores predecidos de la altura. Comente los resultados obtenidos y señale si su modelo logra ser un buen predictor de los valores estudiados.
 
+```{r}
+library(rethinking)
+data_alturas <- read.csv("table_height.csv")
+head(data_alturas)
+
+#histograma de alturas y edad
+hist(data_alturas$age)
+
+# Lo siguiente que vamos a hacer es filtrar a los niños menores de 5 años, ya que estos no estan en el colegio
+data <- data_alturas[data_alturas$age >= 5,]
+
+# De acuerdo a lo anterior hacemos un histograma con el peso
+hist(data$weight)
+
+# Sacamos el promedio y desviacion estandar del peso
+print(paste("weight mean: ", mean(data$weight)))
+print(paste("weight sd: ", sd(data$weight)))
+
+# Hacemos un histograma con los datos actuales
+hist(data$height)
+
+# Sacamos el promedio y la desviacion estandar de la altura
+print(paste("height mean: ",mean(data$height)))
+print(paste("height sd: ",sd(data$height)))
+
+```
+
+```{r}
+data.reg <- quap(
+  # likelihood
+  alist(height ~ dnorm(mu, sigma),
+  # modelo de regresion 
+  mu <- b0 + b1*weight,
+  # prior de B0
+  b0 ~ dnorm(122.5, 18),
+  # prior de B1 normalizado
+  b1 ~ dnorm(0, 1),
+  # prior de sigma, limita los valores a positivos con maximo la ds del prior de B0
+  sigma ~ dunif(0, 20)), data=data
+)
+
+precis(data.reg, prob = 0.95)
+
+```
+
+```{r}
+post <- extract.samples(data.reg, n= 1e4)
+
+library(MASS)
+```
+
+```{r}
+
+# secuencia de pesos
+weight.seq <- seq(from=10 , to=50 , by=1 )
+
+mu.link <- function(weight) post$b0 + post$b1*weight
+mu <- sapply( weight.seq , mu.link )
+
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.95 )
+
+plot(height ~ weight , data=data , col=col.alpha(rangi2, 0.5))
+
+lines(weight.seq, mu.mean)
+# intentamos hacerle plot al shade con 95% HPPDI
+#shade(mu.HPDI, weight.seq)
+#por alguna razon la funcion shade no me funciona :c
+```
+
+```{r}
+
+
+mu <- link(data.reg ,data=data.frame(weight=weight.seq), n=1e4 )
+
+
+
+# ahora usando la distribucion posterior
+height.weight <- function(weight) 
+  rnorm(
+    n=nrow(post) ,
+    mean=post$b0 + post$b1*weight ,
+    sd=post$sigma )
+
+simulation.height <- sapply( weight.seq , height.weight)
+
+
+height.HPDI <- apply(simulation.height, 2, HPDI, prob=0.95)
+
+
+plot(height ~ weight, data, col=col.alpha(rangi2,0.5))
+
+lines(weight.seq , mu.mean )
+
+#shade(mu.HPDI, weight.seq )
+#por alguna razon la funcion shade no me funciona :c
+# draw HPDI region for simulated heights
+#shade(height.HPDI, weight.seq )
+
+
+#FIN parte I
+
+
+```
+
+Una vez terminado esto, podemos decir que por un lado el modelo logra acercarse a la forma de los datos, pero no logra ajustarse de manera correcta, esto dado que estos datos no tienen forma lineal definida, por lo que si se tiene un modelo lineal no logra representar los datos de los estudiantes.
+
+
 **Parte II**
 
 En base a los resultados obtenidos, el experto que trabaja con usted le señala que las alturas se suelen modelas con pesos logarítmicos, por lo que le sugiere añadir un logaritmo natural en el vector $x$ que compone su modelo lineal. Realice nuevamente la regresión utilizando un intervalo del $95\%$ sobre la media y los valores predecidos de la altura. Comente los resultados obtenidos, señalando si el modelo logra ajustar mejor los valores.
 
 **Respuesta:**
 
-> Respuesta Aquí
+```{r}
+# Volveremos a definirnos las variables y les aplicaremos Ln
 
+data$weight <- log(data$weight)
+
+hist(data$weight)
+
+print(paste("weight mean: ", mean(data$weight)))
+print(paste("weight sd: ", sd(data$weight)))
+hist(data$height)
+
+print(paste("height mean: ",mean(data$height)))
+print(paste("height sd: ",sd(data$height)))
+#Aquí podemos ver que el modelo ahora varía la pendiente de la regresion al reducirse la distancia entre los pesos. Entonces b0 y sigma no cambian, pero b1 aumenta. 
+
+data.reg <- quap(
+  alist(height ~ dnorm(mu, sigma),
+  mu <- b0 + b1*weight,
+  b0 ~ dnorm(122.5, 18),
+  b1 ~ dnorm(30, 10),   
+  sigma ~ dunif(0, 20)), data=data
+)
+
+post <- extract.samples(data.reg, n= 1e4)
+
+weight.seq <- seq(from=log(10) , to=log(50) , by= 0.4 )
+
+
+
+mu.link <- function(weight) post$b0 + post$b1*weight
+mu <- sapply( weight.seq , mu.link )
+
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.95 )
+
+plot(height ~ weight , data=data , col=col.alpha(rangi2, 0.5))
+
+lines(weight.seq, mu.mean)
+
+#shade(mu.HPDI, weight.seq) 
+# shade no funciona
+
+
+
+
+mu <- link(data.reg ,data=data.frame(weight=weight.seq), n=1e4 )
+
+
+
+height.weight <- function(weight) 
+  rnorm(
+    n=nrow(post) ,
+    mean=post$b0 + post$b1*weight ,
+    sd=post$sigma )
+
+sim.height <- sapply( weight.seq , height.weight)
+
+
+
+height.HPDI <- apply(sim.height, 2, HPDI, prob=0.95)
+
+
+plot(height ~ weight, data, col=col.alpha(rangi2,0.5))
+
+lines(weight.seq , mu.mean )
+
+#shade(mu.HPDI ,weight.seq )
+
+#shade(height.HPDI ,weight.seq )
+# no funcionan
+
+```
+Comparando este modelo con el anterior podemos notar que este representa de manera acertada tanto los datos de los pesos como de las alturas de los estudiantes. Concluyendo asi que los pesos de los estudiantes tienen una relacion logaritmica con sus alturas. 
 
 #### **Pregunta 2:** MCMC
 
@@ -246,6 +436,105 @@ De ahora en adelante considere $\alpha = 5$ y $\beta = \frac{1}{5}$.
 **Respuesta:**
 
 > Respuesta Aquí
+
+```{r}
+gamma_no_normalizada <- function(alpha, beta, x){
+  if(x > 0){
+    return ((x ^ (alpha - 1)) * (exp(-beta * x)))
+  } else{
+    return(0)
+  }
+}
+
+met <-function(theta0, rep, alpha, beta) {
+  gamma <- c(theta0)
+  for ( i in 2:rep ) {
+    current <- gamma[i-1]
+    proposal <- rnorm(1, current, 1)
+    r <- (gamma_no_normalizada(alpha, beta, proposal)) / (gamma_no_normalizada(alpha, beta, current))
+    prob_move <- min(r, 1)
+    decision <- rbinom(1, 1, prob_move)
+    gamma <- c(gamma, ifelse(decision == 1 , proposal , current))
+  }
+
+  return(gamma[2:rep])
+  
+} 
+
+```
+
+Teniendo lo anterior ya listo, osea nuestra funcion gamma con el MCMC, veremos la distribucion en diferentes casos y junto a esto compararemos su comportamiento, con 100, 1000, 10000 y 100000 repeticiones.
+
+```{r}
+alpha <- 5
+beta <- 1/5
+theta_0 <- 1
+rep <- 100
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+```
+
+
+
+```{r}
+#Con 1000 repeticiones 
+rep <- 1000
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+#Con 10000 repeticiones 
+rep <- 10000
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+#Con 100000 repeticiones 
+rep <- 100000
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+```
+Ahora, dado lo anterior podemos notar que a medida que se incrementa el numero de repeticiones, la distribucion se vuelve cada vez mas clara y marcada.
+
+Luego, veremos como se comporta esta para distintos valores de Theta 0, pero con la cantidad de repeticiones fija en 100000.
+
+```{r}
+rep <- 100000
+#theta = 10
+theta_0 <- 10
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+#theta = 50
+theta_0 <- 50
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+#theta = 100
+theta_0 <- 100
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+#theta = 1000
+theta_0 <- 1000
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+```
+**cambiar**La condición inicial  es importante porque a medida que aumenta theta0, aumenta el número de valores extremos o raros. Esto se debe a que el punto de partida de la función gamma parte de un valor extremo y  va a los valores de densidad más altos.
+
+Por último, vamos a comparar con la funcion Gamma nativa de R
+
+```{r}
+theta_0 <- 1
+positions <- met(theta_0, rep, alpha, beta)
+simplehist(positions, xlab="x", ylab="gamma(x)")
+
+a <- rgamma(rep, rate = beta, shape = alpha)
+simplehist(a, xlab="x", ylab="gamma(x)")
+
+```
+Finalmente, podemos concluir que ambas distribuciones son equivalentes y representan la misma función de densidad.
+
+
 
 &nbsp;
 <hr />
